; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-rc5t583.c_rc5t583_gpio_set.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpio/extr_gpio-rc5t583.c_rc5t583_gpio_set.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.gpio_chip = type { i32 }
%struct.rc5t583_gpio = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { %struct.device* }
%struct.device = type { i32 }

@RC5T583_GPIO_IOOUT = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.gpio_chip*, i32, i32)* @rc5t583_gpio_set to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @rc5t583_gpio_set(%struct.gpio_chip* %0, i32 %1, i32 %2) #0 {
  %4 = alloca %struct.gpio_chip*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca %struct.rc5t583_gpio*, align 8
  %8 = alloca %struct.device*, align 8
  store %struct.gpio_chip* %0, %struct.gpio_chip** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %9 = load %struct.gpio_chip*, %struct.gpio_chip** %4, align 8
  %10 = call %struct.rc5t583_gpio* @gpiochip_get_data(%struct.gpio_chip* %9)
  store %struct.rc5t583_gpio* %10, %struct.rc5t583_gpio** %7, align 8
  %11 = load %struct.rc5t583_gpio*, %struct.rc5t583_gpio** %7, align 8
  %12 = getelementptr inbounds %struct.rc5t583_gpio, %struct.rc5t583_gpio* %11, i32 0, i32 0
  %13 = load %struct.TYPE_2__*, %struct.TYPE_2__** %12, align 8
  %14 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %13, i32 0, i32 0
  %15 = load %struct.device*, %struct.device** %14, align 8
  store %struct.device* %15, %struct.device** %8, align 8
  %16 = load i32, i32* %6, align 4
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %24

18:                                               ; preds = %3
  %19 = load %struct.device*, %struct.device** %8, align 8
  %20 = load i32, i32* @RC5T583_GPIO_IOOUT, align 4
  %21 = load i32, i32* %5, align 4
  %22 = call i32 @BIT(i32 %21)
  %23 = call i32 @rc5t583_set_bits(%struct.device* %19, i32 %20, i32 %22)
  br label %30

24:                                               ; preds = %3
  %25 = load %struct.device*, %struct.device** %8, align 8
  %26 = load i32, i32* @RC5T583_GPIO_IOOUT, align 4
  %27 = load i32, i32* %5, align 4
  %28 = call i32 @BIT(i32 %27)
  %29 = call i32 @rc5t583_clear_bits(%struct.device* %25, i32 %26, i32 %28)
  br label %30

30:                                               ; preds = %24, %18
  ret void
}

declare dso_local %struct.rc5t583_gpio* @gpiochip_get_data(%struct.gpio_chip*) #1

declare dso_local i32 @rc5t583_set_bits(%struct.device*, i32, i32) #1

declare dso_local i32 @BIT(i32) #1

declare dso_local i32 @rc5t583_clear_bits(%struct.device*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
